# patient-appointment-management

./: .coverage  .env.example  .gitignore  README.md  coverage.xml  demo.sh  pyproject.toml
app/: main.py
app/api/: router.py  schemas.py
app/domain/: models.py
app/graph/: builder.py  nodes.py  state.py
app/llm/: client.py  mock_client.py  prompts.py
app/repositories/: interfaces.py  mock_appointments.py  mock_otp.py  mock_patients.py  mock_session.py
app/services/: appointments.py  verification.py
app/utils/: masking.py  normalization.py  time.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  index.css  types.ts
tests/: test_appointments.py  test_routing.py  test_sessions.py  test_verification.py
